--- a/css/cyrillic-sheet.css
+++ b/css/cyrillic-sheet.css
@@ -13,38 +13,26 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0; }
 
-.title {
-  font-variant: small-caps;
-  text-align: center; }
-
 .column {
   overflow: hidden;
   box-sizing: border-box;
   display: flex;
+  justify-content: center;
   align-items: center;
   margin: 0 auto;
   height: 100%;
-  width: var(--main-column-width);
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5) inset; }
+  width: var(--main-column-width); }
 
 .wrap {
   width: 100%;
   background-color: violet; }
 
 .card {
+  flex: 0 1 auto;
   margin: 0 auto;
   height: var(--card-height);
   width: var(--card-width);
   background-color: greenyellow; }
-
-.response {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 15px 0 0 0;
-  height: 80px;
-  width: 100%;
-  background-color: tomato; }
 
 .button {
   cursor: pointer;
@@ -55,13 +43,15 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0 8px;
+  margin: 0 16px;
   height: 80%;
-  width: 25%;
+  width: 75px;
   background-color: teal; }
   .button:hover {
     background-color: springgreen; }
 
-@media only screen and (max-width: 420px) {
-  .column {
-    filter: blur(100%); } }
+.header {
+  background-color: cyan; }
+
+.response {
+  background-color: tomato; }
